Bug 1389335 - Only check APZTestDataEnabled when APZPaintLogHelper is created. r=botond, a=test-only

MozReview-Commit-ID: 50JCZSIcLIn